Documentación en notebook lista

--- a/work/ml_pipeline_tfx.ipynb
+++ b/work/ml_pipeline_tfx.ipynb
@@ -95,6 +95,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el bloque anterior se importan las librerías de Python necesarias para la manipulación de datos (pandas, requests) y se cargan los módulos esenciales de TFX y TensorFlow para la creación de un pipeline, análisis de datos y validación."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -116,6 +123,17 @@
     "    r = requests.get(url, allow_redirects=True, stream=True)\n",
     "    # Abrir el archivo en modo escritura binaria y guardar el contenido directamente\n",
     "    open(_data_filepath, 'wb').write(r.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este segmento se encarga de:\n",
+    "\n",
+    "Verificar si el archivo CSV se encuentra en el sistema local.\n",
+    "Si no existe, descargarlo de la URL especificada.\n",
+    "Leer el archivo en un DataFrame de pandas y mostrar sus primeras filas para verificar la integridad."
    ]
   },
   {
@@ -398,6 +416,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí se aplica el método SelectKBest usando la función f_classif (ANOVA) para determinar cuáles son las columnas más útiles para predecir la variable objetivo (Cover_Type)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -519,6 +544,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente, se reconstruye el DataFrame con las características escogidas y se guarda de nuevo en un CSV para su posterior uso en el pipeline de TFX."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [],
     "vscode": {
@@ -527,6 +559,13 @@
    },
    "source": [
     "## 3. Data Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para automatizar y orquestar las etapas de análisis y validación de datos, se utiliza TensorFlow Extended (TFX). A continuación se describen los componentes principales y su configuración."
    ]
   },
   {
@@ -554,6 +593,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Configuración del InteractiveContext\n",
+    "\n",
+    "Se crea un contexto interactivo de TFX, útil para ejecutar componentes de forma secuencial y observar los resultados dentro de un notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -577,7 +625,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generando Ejemplos Con CsvExampleGen"
+    "### 3.2. Generando Ejemplos Con CsvExampleGen\n",
+    "\n",
+    "CsvExampleGen: Lee los archivos CSV del directorio _data_root y los divide en splits de entrenamiento (train) y validación (eval) usando un método de particionado hash."
    ]
   },
   {
@@ -601,31 +651,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "        if (typeof window.interactive_beam_jquery == 'undefined') {\n",
-       "          var jqueryScript = document.createElement('script');\n",
-       "          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n",
-       "          jqueryScript.type = 'text/javascript';\n",
-       "          jqueryScript.onload = function() {\n",
-       "            var datatableScript = document.createElement('script');\n",
-       "            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n",
-       "            datatableScript.type = 'text/javascript';\n",
-       "            datatableScript.onload = function() {\n",
-       "              window.interactive_beam_jquery = jQuery.noConflict(true);\n",
-       "              window.interactive_beam_jquery(document).ready(function($){\n",
-       "                \n",
-       "              });\n",
-       "            }\n",
-       "            document.head.appendChild(datatableScript);\n",
-       "          };\n",
-       "          document.head.appendChild(jqueryScript);\n",
-       "        } else {\n",
-       "          window.interactive_beam_jquery(document).ready(function($){\n",
-       "            \n",
-       "          });\n",
-       "        }"
-      ]
+      "application/javascript": "\n        if (typeof window.interactive_beam_jquery == 'undefined') {\n          var jqueryScript = document.createElement('script');\n          jqueryScript.src = 'https://code.jquery.com/jquery-3.4.1.slim.min.js';\n          jqueryScript.type = 'text/javascript';\n          jqueryScript.onload = function() {\n            var datatableScript = document.createElement('script');\n            datatableScript.src = 'https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js';\n            datatableScript.type = 'text/javascript';\n            datatableScript.onload = function() {\n              window.interactive_beam_jquery = jQuery.noConflict(true);\n              window.interactive_beam_jquery(document).ready(function($){\n                \n              });\n            }\n            document.head.appendChild(datatableScript);\n          };\n          document.head.appendChild(jqueryScript);\n        } else {\n          window.interactive_beam_jquery(document).ready(function($){\n            \n          });\n        }"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1067,7 +1093,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estadísticas"
+    "### 3.3 Generación de estadísticas: StatisticsGen\n",
+    "\n",
+    "- StatisticsGen: Calcula estadísticas para cada atributo en cada split de datos y las almacena en un artefacto que TFX puede interpretar.\n",
+    "\n",
+    "- Con context.show() se visualizan las estadísticas generadas, lo que facilita la exploración y detección de valores atípicos o problemas en los datos."
    ]
   },
   {
@@ -1849,7 +1879,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inferir el esquema "
+    "### 3.4 Inferencia del esquema: SchemaGen\n",
+    "\n",
+    "SchemaGen: A partir de las estadísticas generadas en StatisticsGen, infiere automáticamente un schema, que incluye:\n",
+    "\n",
+    "- Tipo de dato por atributo (entero, flotante, string, etc.).\n",
+    "\n",
+    "- Presencia requerida, opcional, o valores esperados.\n",
+    " \n",
+    "- Dominios categóricos o límites mínimos y máximos, si se detectan.\n",
+    "\n",
+    "Esta inferencia inicial suele necesitar ajustes manuales (curación) para reflejar el conocimiento experto del dominio."
    ]
   },
   {
@@ -2756,7 +2796,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curando el esquema"
+    "### 4. Curación (modificación) manual del esquema\n",
+    "\n",
+    "En esta sección, se personalizan los límites de algunas variables numéricas y se marcan ciertas columnas como categóricas. Además, se definen los entornos en los que cada atributo debe estar presente: TRAINING y/o SERVING."
    ]
   },
   {
@@ -2985,6 +3027,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se establecen las restricciones correspondientes en cada campo. Por ejemplo, Slope se limita a un rango [0, 90] y Hillshade_9am/Hillshade_Noon a [0, 255]. Además, se marca Cover_Type como categórica con un rango [0, 6], que coincide con el número de clases en el dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
@@ -3010,7 +3059,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Entornos de esquema"
+    "#### 4.1. Entornos de esquema\n",
+    "\n",
+    "Se definen dos entornos: TRAINING y SERVING. La columna Cover_Type, al ser la etiqueta que se quiere predecir, no se espera recibir en producción/servicio y por ello se excluye del entorno SERVING."
    ]
   },
   {
@@ -3273,6 +3324,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2 Guardar y validar el esquema"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -3321,6 +3379,15 @@
     "tfdv.display_anomalies(anomalias)\n",
     "# Valida las estadísticas en el entorno 'SERVING' y muestra las anomalías.\n",
     "# No se esperan anomalías debido a que 'Cover_Type' está excluida de este entorno."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se verifica que no haya anomalías en SERVING (donde Cover_Type está excluida).\n",
+    "\n",
+    "Se muestra una anomalía en TRAINING justamente porque esa columna se considera obligatoria."
    ]
   },
   {
@@ -3391,7 +3458,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Genere nuevas estadısticas usando el esquema actualizado"
+    "### 5. Importar Esquema y Generar Nuevas Estadísticas\n",
+    "\n",
+    "Se ilustra cómo reimportar el esquema guardado, creando un nuevo artefacto de Schema, y cómo StatisticsGen puede utilizarlo para generar estadísticas adicionales."
    ]
   },
   {
@@ -4845,11 +4914,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De esta forma se puede versionar y mantener el esquema actualizado de forma explícita en el pipeline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Comprobar anomalı́as"
+    "### Validación de Ejemplos: ExampleValidator\n"
    ]
   },
   {
@@ -4934,7 +5010,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingenierı́a de caracterı́sticas"
+    "ExampleValidator: Valida los datos en base a un esquema especificado.\n",
+    "\n",
+    "Si existen anomalías (columnas faltantes, rangos fuera de lo establecido, datos en entornos equivocados, etc.), se reportan aquí.\n",
+    "\n",
+    "En este caso, no se encontraron anomalías."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Ingeniería de características: Transform (opcional)\n",
+    "\n",
+    "En esta sección, se podrían definir funciones de preprocesamiento o ingeniería de características que Transform aplicaría a los datos antes del entrenamiento. Por ejemplo, normalización de variables, one-hot encoding, etc."
    ]
   },
   {
@@ -8355,11 +8444,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform usaría TensorFlow Transform (tft) para generar artefactos de transformaciones que luego se pueden reutilizar al entrenar un modelo (Trainer) y en producción (serving)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## 4. Metadatos de aprendizaje automático"
+    "## 4. Metadatos de Aprendizaje de Máquina\n",
+    "\n",
+    "En esta sección se utiliza la librería `ml_metadata` para conectar con el *metadata store* local y examinar los distintos artefactos que se han ido generando a lo largo del pipeline. De este modo, se pueden rastrear y documentar las ejecuciones, datos de entrada y salidas de cada componente.\n",
+    "\n",
+    "### 4.1 Conexión y configuración del almacén de metadatos"
    ]
   },
   {
@@ -8389,11 +8489,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este bloque, se establece la ruta hacia el archivo metadata.sqlite dentro de la carpeta del pipeline (./tfx_pipeline). Dicho archivo contiene toda la información de artefactos, ejecuciones y linajes producidos por TFX."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Acceso a artefactos almacenados"
+    "### 4.2 Acceso a artefactos almacenados\n",
+    "\n",
+    "La siguiente función inf_schema ejemplifica cómo se puede navegar por los distintos tipos de artefactos (por ejemplo, Schema, Examples, TransformGraph, etc.) y recuperar sus propiedades personalizadas (custom_properties), las cuales registran metadatos relevantes (nombre, versión, checksum, etc.)."
    ]
   },
   {
@@ -8423,6 +8532,15 @@
     "            elif value.HasField('int_value'):\n",
     "                print(f\"  {key}: {value.int_value}\")\n",
     "        print(\"-\" * 40)  # Separador visual entre esquemas\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función anterior toma el nombre de un tipo de artefacto (por ejemplo, \"Schema\", \"Examples\", \"ExampleStatistics\", etc.) y muestra, entre otras cosas, el ID, nombre, componentes productores y versión de TFX que generó dicho artefacto.\n",
+    "\n",
+    "Para listar los diferentes tipos de artefactos disponibles y ver la información de cada uno, se utiliza el siguiente bucle:"
    ]
   },
   {
@@ -8569,11 +8687,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esto imprime por pantalla los tipos de artefactos que se han creado en el pipeline (Examples, ExampleStatistics, Schema, ExampleAnomalies, TransformGraph, TransformCache, etc.) y sus propiedades más relevantes.\n",
+    "\n",
+    "El resultado muestra, por ejemplo, la existencia de varios artefactos de tipo Schema con IDs consecutivos y propiedades como producer_component, tfx_version, y la ruta de almacenamiento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Seguimiento de artefactos\n",
+    "### 4.3 Seguimiento de artefactos (linaje)\n",
+    "\n",
+    "La trazabilidad de los artefactos es esencial para entender la procedencia de la información dentro de un proyecto de machine learning. El siguiente fragmento de código define la función get_parent_artifacts, que permite identificar cuáles fueron los artefactos de entrada que dieron origen a un artefacto salida específico:\n",
     "     "
    ]
   },
@@ -8624,6 +8753,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función hace uso de la API de ml_metadata para:\n",
+    "\n",
+    "Obtener los events asociados a un determinado artifact_id.\n",
+    "Identificar los execution_ids que participaron en su creación.\n",
+    "Recopilar los artefactos marcados como INPUT para dichas ejecuciones.\n",
+    "De esta forma, se reconstruye el linaje que permite saber qué datos o esquemas sirvieron de entrada para producir el artefacto final."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -8643,6 +8784,45 @@
     "parent_artifacts = get_parent_artifacts(store, 6)  # Reemplaza con un ID real\n",
     "for artifact_id, info in parent_artifacts.items():\n",
     "    print(f\"ID: {artifact_id}, Tipo: {info['type']}, URI: {info['uri']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El output muestra el ID, el tipo y la URI de los artefactos padres. Por ejemplo, podría indicar que el artifact_id=6 es un ExampleAnomalies que se generó a partir de un Schema (ID=4) y de ExampleStatistics (ID=5).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "A lo largo de este notebook se ha implementado un pipeline integral para proyectos de machine learning, haciendo uso de diversas herramientas y técnicas que garantizan la calidad, reproducibilidad y trazabilidad del proceso. A continuación, se resumen los puntos clave:\n",
+    "\n",
+    "- **Ingesta y Exploración de Datos:**  \n",
+    "  Se realizó la lectura y verificación del dataset de cubierta forestal, asegurando la integridad de los datos y entendiendo su estructura (tipos de datos, distribución y posibles valores atípicos).\n",
+    "\n",
+    "- **Selección de Características:**  \n",
+    "  Se aplicó un método estadístico (SelectKBest con f_classif) para identificar y conservar las variables numéricas más relevantes, facilitando un entrenamiento más eficiente y focalizado en las variables con mayor poder predictivo.\n",
+    "\n",
+    "- **Implementación del Pipeline con TFX:**  \n",
+    "  El uso de componentes como `CsvExampleGen`, `StatisticsGen`, `SchemaGen` y `ExampleValidator` permitió:\n",
+    "  - Ingerir y dividir los datos de manera automatizada.\n",
+    "  - Generar estadísticas descriptivas para identificar potenciales anomalías.\n",
+    "  - Inferir y posteriormente curar un esquema de datos, ajustando dominios y estableciendo restricciones, lo cual asegura que los datos cumplan con los requisitos esperados en cada entorno (TRAINING vs SERVING).\n",
+    "\n",
+    "- **Curación y Validación del Esquema:**  \n",
+    "  Se ajustaron manualmente los límites de ciertas variables y se configuraron entornos específicos para garantizar que la variable objetivo (`Cover_Type`) se excluya en producción, mientras se conserva durante el entrenamiento. La validación con `ExampleValidator` confirmó que los datos se alinean con el esquema esperado.\n",
+    "\n",
+    "- **Gestión y Seguimiento de Metadatos:**  \n",
+    "  Utilizando `ml_metadata`, se exploraron y rastrearon los artefactos generados en cada etapa del pipeline. Esto facilita:\n",
+    "  - La auditoría del flujo de datos y la identificación de los artefactos de entrada que contribuyeron a la creación de un artefacto específico.\n",
+    "  - El seguimiento de versiones, productores y configuraciones, permitiendo una mayor trazabilidad y reproducibilidad del experimento.\n",
+    "\n",
+    "En resumen, este notebook demuestra cómo construir un pipeline robusto y escalable para machine learning que integra la validación de datos, la ingeniería de características y la gestión de metadatos. Este enfoque no solo mejora la calidad del modelo, sino que también facilita la colaboración y el mantenimiento del proyecto a lo largo del tiempo.\n"
    ]
   }
  ],
